# OCanren-basic-template

./: .gitignore  .ocamlformat  Makefile  OCanren-base-example.opam  README.md  dune-project
.github/: CODEOWNERS
.github/workflows/: master.yml
demo1ppx/: append.ml  append.t  appendo.ml  dune  lib.ml  main.ml  run.t  tester.ml  timeout.ml
demo2camlp5/: dune  lib.ml  main.ml  run.t
demo3make/: .gitignore  Makefile  main.ml
demo4ppx-noCanren/: dune  main.ml  run.t
demo5/: .gitignore  Makefile  lib.ml  lozov.ml2mk.ml  main.ml
