(env
 (_
  (flags
   (:standard -warn-error +5-39))))

(library
 (name tester)
 (modules tester timeout)
 (flags
  (:standard -rectypes))
 (libraries OCanren))

(library
 (name lib1)
 (modules lib)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx
   GT.ppx_all
   ppx_inline_test
   OCanren-ppx.ppx_distrib)))

(executable
 (name main)
 (modules main)
 (flags (-rectypes))
 (libraries lib1)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx GT.ppx_all)))

(executable
 (name append)
 (modules append)
 (flags (-rectypes))
 (libraries tester)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx GT.ppx_all)))

(cram
 (deps ./main.exe ./append.exe))
